--- a/public/style.css
+++ b/public/style.css
@@ -15,9 +15,17 @@ nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: rgb(62, 120, 228);
+  background-color: rgb(110, 151, 228);
   position: relative;
   padding: 1rem;
+}
+
+nav > h1 > a {
+  color: rgb(12, 43, 100);
+}
+nav > h1 > a:hover {
+  transition: all 300ms ease-in-out;
+  color: rgb(226, 217, 217);
 }
 
 ul {
@@ -28,7 +36,7 @@ ul {
 
 ul li a {
   font-size: 1.3rem;
-  color: rgb(241, 241, 241);
+  color: rgb(236, 231, 231);
 }
 
 ul li a:hover {
@@ -136,8 +144,9 @@ button {
   width: 1.5rem;
   height: 3px;
   margin: 5px auto;
-  background-color: #fff;
+  background-color: rgb(236, 231, 231);
 }
+
 li {
   margin: 0.5rem 0;
 }
